<resources>
    <string name="app_name">Calculate</string>
    <string name="ac">AC</string>
    <string name="ff">/</string>
    <string name="gg">+/-</string>
    <string name="procent">%</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="Y">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="pls">+</string>
    <string name="_0">0</string>
    <string name="pin">.</string>
    <string name="rovn">=</string>
</resources>