<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nol"
        android:paddingHorizontal="@dimen/tridcatdva"
        android:paddingTop="@dimen/dvenadcat"
        app:layout_constraintBottom_toTopOf="@id/container"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:maxLength="11"
            android:maxLines="1"
            android:minLines="1"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="@dimen/vosemdesat" />

        <com.google.android.material.button.MaterialButton
            style="@style/Base.CardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
              android:id="@+id/button1"
            android:backgroundTint="@color/white"
            android:text="Новое окно!"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/soroc"
            android:alpha="0"
            android:onClick="OnButtonClick"
            />



    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
       app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/shestnadcat"
        >
        <LinearLayout
            android:paddingVertical="@dimen/vosem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray"
                android:id="@+id/Ac"
                android:text="@string/ac"
                android:onClick="OnNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray"
                android:text="@string/gg"
                android:layout_marginHorizontal="16dp"

                />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Gray"
                android:text="@string/procent"
                android:id="@+id/procent"
                android:onClick="OnOperationClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:text="@string/ff"
                android:layout_marginStart="16dp"
                android:id="@+id/delenie"
                android:onClick="OnOperationClick"/>

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark.gray"
                android:text="@string/_7"
                android:id="@+id/seven"
                android:onClick="OnNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark.gray"
                android:text="@string/_8"
                android:id="@+id/eight"
                android:layout_marginHorizontal="@dimen/shestnadcat"
                android:onClick="OnNumberClick"

                />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark.gray"
                android:text="@string/_9"
                android:id="@+id/nine"
                android:onClick="OnNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:text="@string/x"
                android:layout_marginStart="@dimen/shestnadcat"
                android:id="@+id/xis"
                android:onClick="OnOperationClick"/>

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark.gray"
                android:text="@string/_4"
                android:id="@+id/four"
                android:onClick="OnNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark.gray"
                android:text="@string/_5"
                android:id="@+id/five"
                android:layout_marginHorizontal="@dimen/shestnadcat"
                android:onClick="OnNumberClick"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six"
                style="@style/Button.dark.gray"
                android:onClick="OnNumberClick"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:text="@string/Y"
                android:layout_marginStart="@dimen/shestnadcat"
                android:id="@+id/minus"
                android:onClick="OnOperationClick"/>

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="@dimen/vosem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">
            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark.gray"
                android:text="@string/_1"
                android:onClick="OnNumberClick"
                android:id="@+id/one"
                />

            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark.gray"
                android:text="@string/_2"
                android:id="@+id/two"
                android:onClick="OnNumberClick"
                android:layout_marginHorizontal="@dimen/shestnadcat"

                />
            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark.gray"
                android:text="@string/_3"
                android:id="@+id/tree"
                android:onClick="OnNumberClick"/>
            <com.google.android.material.button.MaterialButton
                style="@style/Button.Orange"
                android:text="@string/pls"
                android:layout_marginStart="@dimen/shestnadcat"
                android:id="@+id/plus"
                android:onClick="OnOperationClick"/>

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="@dimen/vosem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
          >
            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark.gray"
                android:text="@string/_0"
                android:textAlignment="textStart"
                android:paddingStart="@dimen/dvadcatcit"
                android:paddingEnd="0dp"
                android:id="@+id/nol"
                android:onClick="OnNumberClick"

                />


            <com.google.android.material.button.MaterialButton
                style="@style/Button.dark.gray"
                android:layout_weight="0"

                android:layout_width="@dimen/vosemdesat"
                android:text="@string/pin"
                android:layout_marginStart="@dimen/tendim"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rovno"
                style="@style/Button.Orange"
                android:layout_width="@dimen/vosemdesat"
                android:layout_marginStart="@dimen/shestnadcat"
                android:layout_weight="0"
                android:text="@string/rovn"
                android:onClick="OnOperationClick"/>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>